Improved shielding, ledge grabbing, grabbing, and added aerial landing lag